// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dva přihlášení 1`] = `
<div
  className="Prihlaseni_div UcastniciTable_container"
>
  <Connect(Filterable)
    actionPrefix="PRIHLASENI"
    numberOfItems={2}
    reduxName="prihlaseni"
  />
  <Connect(UcastniciTableResponsive)
    actionPrefix="PRIHLASENI"
    columns={
      Array [
        Object {
          "cellStyler": [Function],
          "key": "prijmeni",
          "label": "příjmení",
          "sortable": true,
          "width": 100,
        },
        Object {
          "cellStyler": [Function],
          "key": "jmeno",
          "label": "jméno",
          "sortable": true,
          "width": 90,
        },
        Object {
          "cellStyler": [Function],
          "key": "narozeni",
          "label": "narození",
          "sortable": true,
          "width": 100,
        },
        Object {
          "cellStyler": [Function],
          "key": "obec",
          "sortable": true,
          "width": 90,
        },
        Object {
          "cellDataFormatter": [Function],
          "cellStyler": [Function],
          "key": "datum",
          "label": "přihlášení",
          "sortable": true,
          "width": 110,
        },
        Object {
          "cellDataFormatter": [Function],
          "cellStyler": [Function],
          "key": "kategorie",
          "sortable": true,
          "width": 200,
        },
        Object {
          "cellStyler": [Function],
          "key": "startCislo",
          "label": "start. číslo",
          "sortable": true,
          "width": 100,
        },
        Object {
          "cellStyler": [Function],
          "key": "kod",
          "label": "kód",
          "width": 150,
        },
        Object {
          "cellDataFormatter": [Function],
          "cellStyler": [Function],
          "key": "zaplaceno",
          "width": 80,
        },
      ]
    }
    data={
      Array [
        Object {
          "datum": "2018-06-09T00:00:00.000Z",
          "id": "5a09b1fd371dec1e99b7e1c9",
          "jmeno": "Roman",
          "kategorie": Object {
            "id": "5a587e1b051c181132cf83d7",
            "pohlavi": "muž",
            "typ": "půlmaraton",
            "vek": Object {
              "max": 150,
              "min": 60,
            },
          },
          "kod": "10728864",
          "narozeni": "1956",
          "obec": "Ostrava 2",
          "predepsano": 200,
          "prijmeni": "Balabák",
          "startCislo": 17,
          "zaplaceno": 250,
        },
        Object {
          "datum": "2018-06-09T00:00:00.000Z",
          "id": "7a09b1fd371dec1e99b7e142",
          "jmeno": "Hana",
          "kategorie": Object {
            "id": "5a587e1b051c181132cf83d9",
            "pohlavi": "žena",
            "typ": "půlmaraton",
            "vek": Object {
              "max": 39,
              "min": 18,
            },
          },
          "kod": "abc023skd204mvs345",
          "narozeni": "25. 7. 1999",
          "obec": "Bučovice",
          "predepsano": 200,
          "prijmeni": "Zralá",
          "startCislo": 10,
          "zaplaceno": 100,
        },
      ]
    }
    fixedColumnCount={3}
    reduxName="prihlaseni"
    rowHeight={35}
  />
</div>
`;

exports[`načítá se 1`] = `
<div>
  <LoadingIndicator />
   Účastníci se načítají...
</div>
`;

exports[`žádný přihlášený 1`] = `
<div
  className="Prihlaseni_div UcastniciTable_container"
>
  <Connect(Filterable)
    actionPrefix="PRIHLASENI"
    numberOfItems={0}
    reduxName="prihlaseni"
  />
  <Connect(UcastniciTableResponsive)
    actionPrefix="PRIHLASENI"
    columns={
      Array [
        Object {
          "cellStyler": [Function],
          "key": "prijmeni",
          "label": "příjmení",
          "sortable": true,
          "width": 100,
        },
        Object {
          "cellStyler": [Function],
          "key": "jmeno",
          "label": "jméno",
          "sortable": true,
          "width": 90,
        },
        Object {
          "cellStyler": [Function],
          "key": "narozeni",
          "label": "narození",
          "sortable": true,
          "width": 100,
        },
        Object {
          "cellStyler": [Function],
          "key": "obec",
          "sortable": true,
          "width": 90,
        },
        Object {
          "cellDataFormatter": [Function],
          "cellStyler": [Function],
          "key": "datum",
          "label": "přihlášení",
          "sortable": true,
          "width": 110,
        },
        Object {
          "cellDataFormatter": [Function],
          "cellStyler": [Function],
          "key": "kategorie",
          "sortable": true,
          "width": 200,
        },
        Object {
          "cellStyler": [Function],
          "key": "startCislo",
          "label": "start. číslo",
          "sortable": true,
          "width": 100,
        },
        Object {
          "cellStyler": [Function],
          "key": "kod",
          "label": "kód",
          "width": 150,
        },
        Object {
          "cellDataFormatter": [Function],
          "cellStyler": [Function],
          "key": "zaplaceno",
          "width": 80,
        },
      ]
    }
    data={Array []}
    fixedColumnCount={3}
    reduxName="prihlaseni"
    rowHeight={35}
  />
</div>
`;
